criando funçao de incluir funcionario

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,17 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incuir funcionário</title>
+    <title>Cadastro de funcionário</title>
 </head>
 <body>
-    <form action="funcionario/cadastrar" method="POST">
-        <label for="data">Data de criação:</label>
+    <form action="/cadastrar" method="POST">
+        <label for="dataCad">Data de criação:</label>
         <br>
         <input type="date" name="dataCad" id="dataCad">
         <br><br>
         <label for="cargo">Cargo:</label>
         <br>
         <input type="text" name="cargo" id="cargo">
+        <br><br>
+        <label for="cpf">Cpf:</label>
+        <br>
+        <input type="text" name="cpf" id="cpf">
+        <br><br>
+        <label for="cpf">Nome:</label>
+        <br>
+        <input type="text" name="nome" id="nome">
+        <br><br>
+        <label for="ufNasc">UF de Nascimento:</label>
+        <br><br>
+        <select name="ufNasc" id="ufNasc">
+            <option disabled selected>Selecione uma UF de Nascimento</option>
+            <option value="RO">RO</option>
+            <option value="AC">AC</option>
+            <option value="AM">AM</option>
+            <option value="RR">RR</option>
+            <option value="PA">PA</option>
+            <option value="AP">AP</option>
+            <option value="TO">TO</option>
+            <option value="MA">MA</option>
+            <option value="PI">PI</option>
+            <option value="CE">CE</option>
+            <option value="RN">RN</option>
+            <option value="PB">PB</option>
+            <option value="PE">PE</option>
+            <option value="AL">AL</option>
+            <option value="SE">SE</option>
+            <option value="BA">BA</option>
+            <option value="MG">MG</option>
+            <option value="ES">ES</option>
+            <option value="RJ">RJ</option>
+            <option value="SP">SP</option>
+            <option value="PR">PR</option>
+            <option value="SC">SC</option>
+            <option value="RS">RS</option>
+            <option value="MS">MS</option>
+            <option value="MT">MT</option>
+            <option value="GO">GO</option>
+            <option value="DF">DF</option>
+        </select>
+        <br><br>
+        <label for="salario">Salario:</label>
+        <br>
+        <input type="text" name="salario" id="salario">
+        <br><br>
+        <label for="status">Status:</label>
+        <br>
+        <input type="text" name="status" id="status">
         <br><br>
         <button type="submit">Enviar</button>
     </form>
