--- a/views/deletarFuncionario.ejs
+++ b/views/deletarFuncionario.ejs
@@ -6,7 +6,7 @@
     <title>Cadastro de funcionário</title>
 </head>
 <body>
-    <form method="POST" action="/excluir/:cpf?_method=DELETE">
+    <form method="POST" action="/funcionario/excluir/:cpf?_method=DELETE">
         <label for="cpf">Cpf:</label>
         <br>
         <input type="text" name="cpf" id="cpf" required>
