--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,22 +2,17 @@ div.container > nav {
     margin-bottom: 20px;
 }
 
-ul.navbar-nav {
-    flex-direction: row;
-}
-
 ul.navbar-nav a {
     margin-right: 1rem;
 }
 
+h4 {
+    margin-top: 20px;
+}
 form {
     margin-top: 2rem;
 }
 
-/* input {
-    width: 50%;
-} */
-
-button {
-    margin-left: 1rem;
+#botao-form {
+    margin-bottom: 0.8rem;
 }
