--- a/views/excluirFuncionario.ejs
+++ b/views/excluirFuncionario.ejs
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Cadastro de funcionário</title>
 </head>
 <body>
     <div class="container">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand">Allugator</a>
-            <ul class="navbar-nav">
+            <ul class="nav justify-content-end">
               <li class="nav-item">
-                <a class="nav-link" href="index.ejs">Pesquisar <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="formCadastro.ejs">Cadastrar</a>
+                <a class="nav-link" href="/funcionarios/cadastrar">Cadastrar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Exluir</a>
@@ -24,14 +24,14 @@
             </ul>
         </nav>
         <h5>Excluir um funcionario</h5>
-        <form method="POST" action="/funcionario/excluir/:cpf?_method=DELETE">
+        <form method="POST" action="/funcionarios/excluir/:cpf?_method=DELETE">
             <label for="cpf">CPF:</label>
-            <input type="text" name="cpf" id="cpf" required>
-            <button type="submit">Deletar</button>
+            <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
+            <button class="btn btn-danger" type="submit">Excluir</button>
         </form>
     </div>
     
-    <script src="../public/jquery-3.5.1.min.js"></script>
+    <script src="./jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
