--- a/views/formCadastro.ejs
+++ b/views/formCadastro.ejs
@@ -4,45 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Cadastro de funcionário</title>
 </head>
 <body>
     <div class="container">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand">Allugator</a>
-            <ul class="navbar-nav">
+            <ul class="nav justify-content-end">
               <li class="nav-item ">
-                <a class="nav-link" href="index.ejs">Pesquisar <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Cadastrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="excluirFuncionario.ejs">Exluir</a>
+                <a class="nav-link" href="/funcionarios/excluir">Exluir</a>
               </li>
             </ul>
         </nav>
         <h4>Cadastrar um funcionario</h4>
-        <form action="/funcionario/cadastrar" method="POST">
+        <form action="/funcionarios/cadastrar" method="POST">
             <label for="dataCad">Data de criação:</label>
-            <br>
             <input type="date" name="dataCad" id="dataCad" required>
             <br><br>
             <label for="cargo">Cargo:</label>
-            <br>
             <input type="text" name="cargo" id="cargo" required>
             <br><br>
-            <label for="cpf">Cpf:</label>
-            <br>
-            <input type="text" name="cpf" id="cpf" required>
+            <label for="cpf">CPF:</label>
+            <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
             <br><br>
             <label for="cpf">Nome:</label>
-            <br>
             <input type="text" name="nome" id="nome" required>
             <br><br>
             <label for="ufNasc">UF de Nascimento:</label>
-            <br><br>
+            <br>
             <select name="ufNasc" id="ufNasc" required>
                 <option disabled selected>Selecione uma UF de Nascimento</option>
                 <option value="RO">RO</option>
@@ -74,18 +70,16 @@
                 <option value="DF">DF</option>
             </select>
             <br><br>
-            <label for="salario">Salario:</label>
-            <br>
+            <label for="salario">Salário (R$)</label>
             <input type="text" name="salario" id="salario" required>
             <br><br>
             <label for="status">Status:</label>
-            <br>
             <input type="text" name="status" id="status" required>
             <br><br>
-            <button type="submit">Enviar</button>
+            <button class="btn btn-success" type="submit" id="botao-form">Enviar</button>
         </form>
     </div>
-    <script src="../public/jquery-3.5.1.min.js"></script>
+    <script src="./jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
