--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,10 @@
         <a class="navbar-brand">Allugator</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/funcionarios">Listar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/funcionarios/cadastrar">Cadastrar</a>
+            <a class="nav-link" href="/funcionarios/criar">Cadastrar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/funcionarios/excluir">Exluir</a>
