--- a/views/criarFuncionario.ejs
+++ b/views/criarFuncionario.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Cadastro de funcionário</title>
+    <title>Allugator</title>
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,7 @@
             <a class="navbar-brand">Allugator</a>
             <ul class="nav justify-content-end">
               <li class="nav-item ">
-                <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/funcionarios">Listar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Cadastrar</a>
@@ -23,8 +23,8 @@
               </li>
             </ul>
         </nav>
-        <h4>Cadastrar um funcionario</h4>
-        <form action="/funcionarios/cadastrar" method="POST">
+        <h4>Criar um funcionario</h4>
+        <form action="/funcionarios/criar" method="POST">
             <label for="dataCad">Data de criação:</label>
             <input type="date" name="dataCad" id="dataCad" required>
             <br><br>
