--- a/views/excluirFuncionario.ejs
+++ b/views/excluirFuncionario.ejs
@@ -16,7 +16,7 @@
                 <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/funcionarios/cadastrar">Cadastrar</a>
+                <a class="nav-link" href="/funcionarios/criar">Cadastrar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Exluir</a>
