--- a/views/criarFuncionario.ejs
+++ b/views/criarFuncionario.ejs
@@ -13,7 +13,7 @@
             <a class="navbar-brand">Allugator</a>
             <ul class="nav justify-content-end">
               <li class="nav-item ">
-                <a class="nav-link" href="/funcionarios">Listar <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/funcionarios/listar">Listar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Cadastrar</a>
@@ -23,63 +23,67 @@
               </li>
             </ul>
         </nav>
+        <br>
         <h4>Criar um funcionario</h4>
-        <form action="/funcionarios/criar" method="POST">
-            <label for="dataCad">Data de criação:</label>
-            <input type="date" name="dataCad" id="dataCad" required>
-            <br><br>
-            <label for="cargo">Cargo:</label>
-            <input type="text" name="cargo" id="cargo" required>
-            <br><br>
-            <label for="cpf">CPF:</label>
-            <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
-            <br><br>
-            <label for="cpf">Nome:</label>
-            <input type="text" name="nome" id="nome" required>
-            <br><br>
-            <label for="ufNasc">UF de Nascimento:</label>
-            <br>
-            <select name="ufNasc" id="ufNasc" required>
-                <option disabled selected>Selecione uma UF de Nascimento</option>
-                <option value="RO">RO</option>
-                <option value="AC">AC</option>
-                <option value="AM">AM</option>
-                <option value="RR">RR</option>
-                <option value="PA">PA</option>
-                <option value="AP">AP</option>
-                <option value="TO">TO</option>
-                <option value="MA">MA</option>
-                <option value="PI">PI</option>
-                <option value="CE">CE</option>
-                <option value="RN">RN</option>
-                <option value="PB">PB</option>
-                <option value="PE">PE</option>
-                <option value="AL">AL</option>
-                <option value="SE">SE</option>
-                <option value="BA">BA</option>
-                <option value="MG">MG</option>
-                <option value="ES">ES</option>
-                <option value="RJ">RJ</option>
-                <option value="SP">SP</option>
-                <option value="PR">PR</option>
-                <option value="SC">SC</option>
-                <option value="RS">RS</option>
-                <option value="MS">MS</option>
-                <option value="MT">MT</option>
-                <option value="GO">GO</option>
-                <option value="DF">DF</option>
-            </select>
-            <br><br>
-            <label for="salario">Salário (R$)</label>
-            <input type="text" name="salario" id="salario" required>
-            <br><br>
-            <label for="status">Status:</label>
-            <input type="text" name="status" id="status" required>
-            <br><br>
-            <button class="btn btn-success" type="submit" id="botao-form">Enviar</button>
-        </form>
+        <div class="row">
+            <div class="col-sm-4">
+              <form class="form-group" action="/funcionarios/criar" method="POST">
+                <label for="dataCad">Data de criação:</label>
+                <input class="form-control" type="date" name="dataCad" id="dataCad" required>
+                <br>
+                <label for="cargo">Cargo:</label>
+                <input class="form-control" type="text" name="cargo" id="cargo" required>
+                <br>
+                <label for="cpf">CPF:</label>
+                <input class="form-control" type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
+                <br>
+                <label for="cpf">Nome:</label>
+                <input class="form-control" type="text" name="nome" id="nome" required>
+                <br>
+                <label for="ufNasc">UF de Nascimento:</label>
+                <select class="form-control" name="ufNasc" id="ufNasc" required>
+                    <option disabled selected>Selecione uma UF de Nascimento</option>
+                    <option value="RO">RO</option>
+                    <option value="AC">AC</option>
+                    <option value="AM">AM</option>
+                    <option value="RR">RR</option>
+                    <option value="PA">PA</option>
+                    <option value="AP">AP</option>
+                    <option value="TO">TO</option>
+                    <option value="MA">MA</option>
+                    <option value="PI">PI</option>
+                    <option value="CE">CE</option>
+                    <option value="RN">RN</option>
+                    <option value="PB">PB</option>
+                    <option value="PE">PE</option>
+                    <option value="AL">AL</option>
+                    <option value="SE">SE</option>
+                    <option value="BA">BA</option>
+                    <option value="MG">MG</option>
+                    <option value="ES">ES</option>
+                    <option value="RJ">RJ</option>
+                    <option value="SP">SP</option>
+                    <option value="PR">PR</option>
+                    <option value="SC">SC</option>
+                    <option value="RS">RS</option>
+                    <option value="MS">MS</option>
+                    <option value="MT">MT</option>
+                    <option value="GO">GO</option>
+                    <option value="DF">DF</option>
+                </select>
+                <br>
+                <label for="salario">Salário (R$)</label>
+                <input class="form-control" type="text" name="salario" id="salario" required>
+                <label for="status">Status:</label>
+                <input class="form-control" type="text" name="status" id="status" required>
+                <br>
+                <button class="btn btn-success" type="submit" id="botao-form">Enviar</button>
+            </form>
+            </div>
+        </div>
+        
     </div>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="../jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
