--- a/views/excluirFuncionario.ejs
+++ b/views/excluirFuncionario.ejs
@@ -13,25 +13,41 @@
             <a class="navbar-brand">Allugator</a>
             <ul class="nav justify-content-end">
               <li class="nav-item">
-                <a class="nav-link" href="/funcionarios">Pesquisar <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/funcionarios/listar">Listar <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/funcionarios/criar">Cadastrar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Exluir</a>
+                <a class="nav-link" href="/funcionarios/excluir">Exluir</a>
               </li>
             </ul>
         </nav>
+        <br>
         <h5>Excluir um funcionario</h5>
-        <form method="POST" action="/funcionarios/excluir/:cpf?_method=DELETE">
-            <label for="cpf">CPF:</label>
-            <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
-            <button class="btn btn-danger" type="submit">Excluir</button>
-        </form>
+        <div class="row">
+          <div class="col-sm-4">
+            <form class="form-group" method="POST" action="/funcionarios/excluir/:cpf?_method=DELETE">
+              <label for="cpf">CPF:</label>
+              <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
+              <button class="btn btn-danger" type="submit">Excluir</button>
+          </form>
+          <% if(errors.length > 0){%>
+            <div class='alert alert-danger'>
+              <p><b>Por favor, verifique os erros antes de continuar:</b></p>
+              <ul>
+                <% errors.forEach(erro => {%>
+                  <li><%= erro%></li>
+                <%})%>
+              </ul>          
+            </div>        
+          <%}%>
+          </div>
+        </div>
+        
     </div>
     
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="../jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
