--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <a class="navbar-brand">Allugator</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="/funcionarios">Listar <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/funcionarios/listar">Listar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/funcionarios/criar">Cadastrar</a>
