--- a/views/listarFuncionarios.ejs
+++ b/views/listarFuncionarios.ejs
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="/public/css/main.css">
   <title>Desafio Allugator</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <a class="navbar-brand">Allugator</a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="/funcionarios">Listar <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Listar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/funcionarios/criar">Cadastrar</a>
@@ -26,7 +27,7 @@
       <h5>Pesquisar funcionario por</h5>
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <a class="nav-link" id="nome-tab" data-toggle="tab" href="#nome" role="tab" aria-controls="nome" aria-selected="true">Nome</a>
+          <a class="nav-link active" id="nome-tab" data-toggle="tab" href="#nome" role="tab" aria-controls="nome" aria-selected="true">Nome</a>
         </li>
         <li class="nav-item" role="presentation">
           <a class="nav-link" id="cpf-tab" data-toggle="tab" href="#cpf" role="tab" aria-controls="cpf" aria-selected="false">CPF</a>
@@ -49,31 +50,31 @@
       </ul>
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="nome" role="tabpanel" aria-labelledby="nome-tab">
-            <form action="/funcionarios/listar" class="form-group">
+            <form action="/funcionarios/listar/pesquisar" class="form-group">
                 <input type="text" name="nome" id="nome" required>
                 <button class="btn btn-primary">Pesquisar</button>
             </form>
         </div>
         <div class="tab-pane fade" id="cpf" role="tabpanel" aria-labelledby="cpf-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <input type="text" name="cpf" id="cpf" placeholder="Apenas números" required>
             <button class="btn btn-primary">Pesquisar</button>
           </form>
         </div>
         <div class="tab-pane fade" id="cargo" role="tabpanel" aria-labelledby="cargo-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <input type="text" name="cargo" id="cargo" required>
             <button class="btn btn-primary">Pesquisar</button>
           </form>
         </div>
         <div class="tab-pane fade" id="dataCad" role="tabpanel" aria-labelledby="dataCad-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <input type="date" name="dataCad" id="dataCad" required>
             <button class="btn btn-primary">Pesquisar</button>
           </form>
         </div>
         <div class="tab-pane fade" id="ufNasc" role="tabpanel" aria-labelledby="ufNasc-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <select name="ufNasc" id="ufNasc" required>
               <option disabled selected>Selecione uma UF de Nascimento</option>
               <option value="RO">RO</option>
@@ -108,23 +109,68 @@
           </form>
         </div>
         <div class="tab-pane fade" id="salario" role="tabpanel" aria-labelledby="salario-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <input type="text" name="salario" id="salario" required>
             <button class="btn btn-primary">Pesquisar</button>
           </form>
         </div>
         <div class="tab-pane fade" id="status" role="tabpanel" aria-labelledby="status-tab">
-          <form action="/funcionarios/listar" class="form-group">
+          <form action="/funcionarios/listar/pesquisar" class="form-group">
             <input type="text" name="status" id="status" required>
             <button class="btn btn-primary">Pesquisar</button>
           </form>
         </div>
       </div>
+      <% if(errors.length > 0){%>
+        <div class='alert alert-danger'>
+          <p><b>Por favor, verifique os erros antes de continuar:</b></p>
+          <ul>
+            <% errors.forEach(erro => {%>
+              <li><%= erro%></li>
+            <%})%>
+          </ul>          
+        </div>        
+      <%}%>
+      <% if(resultadoBusca.length == 0){%>
+          <div class="alert alert-info">
+            <p>Nenhum funcionario encontrado</p>
+          </div>
+      <%} else { %>
+        <table class="table table-striped table-hover">
+          <thead>
+              <tr>
+                  <th>Data de cadastro</th>
+                  <th>Cargo</th>
+                  <th>CPF</th>
+                  <th>Nome</th>
+                  <th>UF</th>
+                  <th>Salário</th>
+                  <th>Status</th>
+              </tr>
+          </thead>
+          <tbody>
+            <% resultadoBusca.forEach(funcionario => { %>
+              <tr>
+                  <td><%= funcionario.dataCad%></td>
+                  <td><%= funcionario.cargo%></td>
+                  <td><%= funcionario.cpf%></td>
+                  <td><%= funcionario.nome%></td>
+                  <td><%= funcionario.ufNasc%></td>
+                  <td><%= funcionario.salario%></td>
+                  <td><%= funcionario.status%></td>
+              </tr>
+            <% }) %>
+              
+          </tbody>
+      </table>
+      <% } %>
+      
   </div>
   
 
-  <script src="./jquery-3.5.1.min.js"></script>
+  <script src="/public/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  
 </body>
 </html>
